--- a/mvc_customer/config.yml
+++ b/mvc_customer/config.yml
@@ -1,10 +1,10 @@
 context:
   environment: dev
 connection:
-    type: postgres
+    type: postgresql
     host: localhost
     port: 5432
-    user: postgres
+    username: postgres
     password: postgres
     database: postgres
 schemas:
