--- a/mvc_customer/customer/user.yaml
+++ b/mvc_customer/customer/user.yaml
@@ -6,9 +6,10 @@ columns:
     type: int
     primary_key: true
   - name: name
-    type: varchar(255)
+    type: varchar
   - name: email
     type: varchar
+    length: 50
   - name: dob
     type: date
   - name: created_at
